--- a/scss/abstracts/_sizes.scss
+++ b/scss/abstracts/_sizes.scss
@@ -3,6 +3,20 @@ $sizes: (
     12: 0.75rem,
     16: 1rem,
     20: 1.25rem,
+    24: 1.5rem,
     32: 2rem,
-    35: 2.25rem,
-)
+    36: 2.25rem,
+    48: 2.75rem,
+);
+
+$hero-padding: clamp(13rem, 15vh, 20rem);
+$section-padding: clamp(3rem, 10vh, 7rem);
+
+$card-body-padding: clamp(2em, 10vw , 5rem);
+
+$grid-gap: 1.5rem;
+$flex-group-gap: 1rem;
+
+$container-inline-padding: 1rem;
+$container-max-width: 60rem;
+$container-max-width-wide: 75rem;
