--- a/scss/utilities/_container.scss
+++ b/scss/utilities/_container.scss
@@ -1,4 +1,19 @@
+@use '../abstracts/' as *;
+
 .container {
-    width: min(100% - 2rem, 60rem);
+    //using interpolation whenever we are declaring custom properties
+    --padding: #{$container-inline-padding} * 2;
+    --max-width: #{$container-max-width};
+
+    width: min(100% - var(--padding), var(--max-width));
     margin-inline: auto;
+}
+
+.container[data-type="wide"]{
+    --max-width: #{$container-max-width-wide};
+}
+
+.container[data-type="full-bleed"] {
+    --padding: 0px;
+    --max-width: 100%; //or 100vw
 }
