--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,5 +1,15 @@
 @use '../abstracts/' as *;
 
+.section {
+    padding-block: $section-padding;
+}
+
+
+//margin inline auto
+.mx-auto {
+    margin-inline: auto;
+}
+
 @each $size-name, $size-value in $sizes {
     .margin {
         &-#{$size-name}{
